--- a/package.json
+++ b/package.json
@@ -20,10 +20,16 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.0.2",
+    "@nestjs/cache-manager": "^2.2.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^4.0.2",
+    "axios": "^1.7.2",
+    "cache-manager": "^5.6.1",
+    "dayjs": "^1.11.11",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
