--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
     "@nestjs/axios": "^3.0.2",
     "@nestjs/cache-manager": "^2.2.2",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^4.0.2",
     "axios": "^1.7.2",
     "cache-manager": "^5.6.1",
+    "cache-manager-redis-yet": "^5.1.1",
     "dayjs": "^1.11.11",
+    "dotenv": "^16.4.5",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
